manifests/seafile-0.12.0.tgz-manifest.yaml
---
# Source: seafile/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-seafile
  labels: 
    app.kubernetes.io/name: seafile
    helm.sh/chart: seafile-0.12.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "11.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  clusterIP: "None"
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: seafile
    app.kubernetes.io/instance: my-release
---
# Source: seafile/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-seafile
  labels: 
    app.kubernetes.io/name: seafile
    helm.sh/chart: seafile-0.12.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "11.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: my-release-seafile
  replicas:  1 
  selector:
    matchLabels:
      app.kubernetes.io/name: seafile
      app.kubernetes.io/instance: my-release
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seafile
        app.kubernetes.io/instance: my-release
    spec:
      containers:
      - name: seafile
        image: docker.io/seafileltd/seafile-mc:11.0.3
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: seafile-data
          mountPath: /shared
  volumeClaimTemplates:
  - metadata:
      name: seafile-data
      annotations:
        helm.sh/resource-policy: keep
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
# Source: seafile/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-seafile
  annotations:
    # disable max body size check
    # https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/nginx-configuration/annotations.md#custom-max-body-size
    # http://nginx.org/en/docs/http/ngx_http_core_module.html#client_max_body_size
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "seafile.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-release-seafile
            port:
              number: 80
